[package]
name = "tun_rust"
version = "0.1.0"
authors = ["devg1120 <devg1120@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio-tun = "0.3.5"
tokio-tun = { git = "https://github.com/yaa110/tokio-tun.git" }
tokio = { version = "1.1", features = ["net"] }
libc = "0.2"
nix = "0.19"
futures = "0.3"

pnet = "0.27.2"


[dev-dependencies]
tokio = { version = "1.1", features = ["full"] }


